[gd_scene load_steps=3 format=3 uid="uid://d0025c86k7cap"]

[ext_resource type="Script" path="res://scenes/relic_handler/relic_tooltip.gd" id="1_uggfh"]
[ext_resource type="Texture2D" uid="uid://rvsrwqfd2pqt" path="res://art/tile_0064.png" id="2_epuq5"]

[node name="RelicTooltip" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uggfh")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0.0392157, 0.117647, 0.784314)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -26.0
offset_right = 75.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2

[node name="RelicIcon" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("2_epuq5")
expand_mode = 1
stretch_mode = 5

[node name="RelicTooltip" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "[center]Card Description, descriptiveness of the card description describes the description described[/center]"
fit_content = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
